// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueueElement multiple words 1`] = `
<span>
  das Buch
</span>
`;

exports[`QueueElement single word 1`] = `
<span>
  Buch
</span>
`;

exports[`TranslationQueue empty queue 1`] = `
<div
  id="translation-queue"
/>
`;

exports[`TranslationQueue not in document viewer 1`] = `
<div
  id="translation-queue"
/>
`;

exports[`TranslationQueue populated queue 1`] = `
<div
  id="translation-queue"
>
  <QueueElement
    key="tq-0-Die "
    pos={0}
    remove={[MockFunction]}
    text="Die "
  />
  <QueueElement
    key="tq-1-Welt "
    pos={1}
    remove={[MockFunction]}
    text="Welt "
  />
  <QueueElement
    key="tq-2-ist "
    pos={2}
    remove={[MockFunction]}
    text="ist "
  />
  <QueueElement
    key="tq-3-meine "
    pos={3}
    remove={[MockFunction]}
    text="meine "
  />
  <QueueElement
    key="tq-4-Vorstellung"
    pos={4}
    remove={[MockFunction]}
    text="Vorstellung"
  />
</div>
`;
